# ai-finops-optimization-agent

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: architecture.html
examples/: daily_report.py  find_waste.py  rightsizing_analysis.py
src/: __init__.py  config.py  finops_agent.py
src/analyzers/: __init__.py  anomaly_detector.py  reserved_advisor.py  rightsizing.py  waste_finder.py
src/collectors/: __init__.py  aws_costs.py  azure_costs.py  gcp_costs.py
src/optimizers/: __init__.py  cleanup.py  reservation.py  scheduler.py
src/reporters/: __init__.py  dashboard.py  email_reporter.py  slack_reporter.py
